Fixes quote source dash misplaced on mobile

--- a/sass/amaury-carrade/page/_content.scss
+++ b/sass/amaury-carrade/page/_content.scss
@@ -382,7 +382,7 @@
                 top: .42em;
 
                 @include mobile {
-                    left: calc(#{$article-padding-mobile} + 3.3em);
+                    left: calc(#{$article-padding-mobile} + 2.3em);
                 }
             }
         }
